--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
             <!-- Slides -->
             <div class="swiper-slide">약속
                 <div class="main_image1">
-                    <img src="C:\Users\faidi\Desktop\painimg1배경제거.png" width="1450px" height="780px">
+                    <img src="C:\Users\faidi\Desktop\team_img1.png" width="1450px" height="780px">
                     <div class="main_text1">
                         <div>
                             <h1>13~14시 점심시간, 18~19시 저녁시간</h1>
@@ -101,7 +101,7 @@
             </div>
             <div class="swiper-slide">캠프 기간 동안, 우리 팀의 다짐
                 <div class="main_image2">
-                    <img src="C:\Users\faidi\Desktop\IMG_0848.PNG" width="1350px" height="300px">
+                    <img src="C:\Users\faidi\Desktop\team_img2.PNG" width="1350px" height="300px">
                     <div class="main_text2">
                         <h1>조 이름과는 반대로, <p>코드 짜주는(만드는) 사람 되기</p>
                         </h1>
